<resources>
    <string name="app_name">LumisferaPlayerHelper</string>
    <string name="createSheet">Crear ficha</string>
    <string name="loadSheet">Cargar ficha</string>
    <string name="manual">Manual</string>
    <string name="wizard">Asistente</string>
    <string name="template">Plantilla</string>
    <string name="open">abierto</string>
    <string name="close">cerrado</string>
    <string name="race">Raza</string>
    <string name="actitude">Actitud Inicial</string>
    <string name="name">Nombre</string>
    <string name="general">General</string>
    <string name="combat">Combate</string>
    <string name="magic">Magia</string>
    <string name="equip">Equipo</string>
    <string name="experience">Px</string>
    <string name="level">Nivel</string>
    <string name="gastado">Gastado</string>
    <string name="talentos">Talentos</string>
    <string name="ganado">Ganado</string>
    <string name="restantes">Restantes</string>
    <string name="nexo">Nexo</string>
    <string name="arquetipo">Arquetipo</string>
    <string name="carrera">Carrera</string>
    <string name="doctrina">Doctrina</string>
    <string name="religion">Religion</string>
    <string name="materia">Materia</string>
    <string name="vida">Vida</string>
    <string name="anima">Anima</string>
    <string name="energia">Energía</string>
    <string name="eter">Eter</string>
    <string name="resistencia">Resistencia</string>
    <string name="percepcion">Percepcion</string>
    <string name="fuerza">Fuerza</string>
    <string name="voluntad">Voluntad</string>
    <string name="destreza">Destreza</string>
    <string name="consciencia">Consciencia</string>
    <string name="agilidad">Agilidad</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="puntosPoder">Puntos de poder</string>

    <string-array name="races">
        <item>Elfo</item>
        <item>Humano</item>
        <item>Enano</item>
        <item>Aviari</item>
        <item>Gnomo</item>
        <item>Jotnar</item>
    </string-array>

    <string-array name="actitudes">
        <item>Afable</item>
        <item>Rudo</item>
        <item>Grosero</item>
        <item>Corriente</item>
    </string-array>

    <string-array name="nexos">
    <item>Vida</item>
    <item>Materia</item>
    <item>Anima</item>
    <item>Inmaterium</item>
    <item>S/N</item>
    </string-array>

    <!-- carreras - arquetipos -->

    <string-array name="carreras">
        <item>Luchador</item>
        <item>Granuja</item>
        <item>Teurgo</item>
        <item>Estadista</item>
        <item>Mago</item>
    </string-array>

    <string-array name="luchador">
        <item>Primer</item>
        <item>Mercenario</item>
        <item>Barbaro</item>
        <item>Caballero</item>
        <item>Pirata</item>
        <item>S/N</item>
    </string-array>

    <string-array name="granuja">
        <item>Estafador</item>
        <item>Ladrón</item>
        <item>Cazarrecompensas</item>
        <item>Ballestero Imperial</item>
        <item>Buscador de tesoros</item>
        <item>S/N</item>
    </string-array>

    <string-array name="teurgo">
        <item>Predicador</item>
        <item>Misionero</item>
        <item>Druida</item>
        <item>Paladin</item>
        <item>Consejero Espiritual</item>
        <item>S/N</item>
    </string-array>

    <string-array name="estadista">
        <item>Cortesano</item>
        <item>Diplomatico</item>
        <item>Proservón</item>
        <item>Arqueologo</item>
        <item>Abogado</item>
        <item>S/N</item>
    </string-array>

    <string-array name="mago">
        <item>Consejero</item>
        <item>Pacificador</item>
        <item>Asalariado</item>
        <item>Mago de batalla</item>
        <item>Buscamagia</item>
        <item>S/N</item>
    </string-array>

    <!-- fin carreras - arquetipos -->

    <!-- religion - doctrinas -->
    <string-array name="religiones">
        <item>Demiurgo</item>
        <item>Panteon Elfo</item>
        <item>Panteon Enano</item>
        <item>Panteon Varuktar</item>
        <item>Panteon Yizidis</item>
        <item>Panteon Arbithio</item>
        <item>Panteon Venabingio</item>
        <item>Yigerfein</item>
        <item>Adhaiyi</item>
    </string-array>

    <string-array name="demiurgo">
        <item>Salvacionista</item>
        <item>Armonista</item>
        <item>Catastofrista</item>
    </string-array>

    <string-array name="panteonElfo">
        <item>Sha\'Ark</item>
        <item>Deanté</item>
        <item>Danita</item>
        <item>Megorath</item>
        <item>Malfell</item>
    </string-array>

    <string-array name="panteonEnano">
        <item>El Creador</item>
        <item>El Instructor</item>
        <item>El Guardian</item>
    </string-array>

    <string-array name="panteonVaruktar">
        <item>Rokga</item>
        <item>Kagjan</item>
        <item>Morkantul</item>
        <item>Ikman</item>
    </string-array>

    <string-array name="panteonYizidis">
        <item>Awe</item>
        <item>Ulule</item>
        <item>Deimi</item>
        <item>Halcyon</item>
        <item>Sherende</item>
    </string-array>

    <string-array name="panteonArbithio">
        <item>Arbiskar</item>
        <item>Kasdail</item>
        <item>Achiel</item>
        <item>Gorykael</item>
        <item>Rauma Dresidae</item>
        <item>Meraie</item>
        <item>Sharamina</item>
    </string-array>

    <string-array name="panteonVenabingio">
        <item>Barbal</item>
        <item>Letha</item>
        <item>Hadram</item>
        <item>Idwar</item>
        <item>Bilitha</item>
    </string-array>

    <string-array name="panteonYigerfein">
        <item>Sandall</item>
        <item>Orom</item>
        <item>Bela</item>
        <item>Rhiamono</item>
    </string-array>

    <string-array name="panteonAdhaiyi">
        <item>Yerende</item>
        <item>Maha</item>
        <item>Aniyah</item>
    </string-array>

    <!-- fin dios - doctrinas -->


</resources>