<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/layoutActitud"
        app:layout_constraintEnd_toStartOf="@+id/layoutRace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRace"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/race"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/layoutActitud"
        app:layout_constraintStart_toEndOf="@+id/layoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/chooseRace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutActitud"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/actitude"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/layoutCarrera"
        app:layout_constraintEnd_toStartOf="@+id/layoutNexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutName">

        <AutoCompleteTextView
            android:id="@+id/chooseActitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNexo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nexo"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/layoutActitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRace">

        <AutoCompleteTextView
            android:id="@+id/chooseNexo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCarrera"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/carrera"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/layoutReligion"
        app:layout_constraintEnd_toStartOf="@+id/layoutArquetipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActitud">

        <AutoCompleteTextView
            android:id="@+id/chooseCarrera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutArquetipo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/arquetipo"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/layoutCarrera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNexo"
        app:layout_constraintBottom_toTopOf="@+id/layoutDoctrina">

        <AutoCompleteTextView
            android:id="@+id/chooseArquetipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutReligion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/religion"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/layoutDoctrina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCarrera"
        app:layout_constraintBottom_toTopOf="@+id/table">

        <AutoCompleteTextView
            android:id="@+id/chooseReligion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDoctrina"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/doctrina"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/layoutReligion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutArquetipo">

        <AutoCompleteTextView
            android:id="@+id/chooseDios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLevel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="25dp"
        android:hint="@string/level"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/table"
        app:layout_constraintTop_toBottomOf="@+id/layoutDoctrina">

        <EditText
            android:id="@+id/editLevel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:enabled="false"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toStartOf="@+id/layoutLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutReligion"
        android:background="@drawable/border_header">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView android:gravity="center" />

            <TextView
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/experience"
                android:background="@drawable/border"
                android:textSize="12sp" />

            <TextView
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/talentos"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/ganado"
                android:background="@drawable/border"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editGanadaPx"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:inputType="number"
                android:padding="3dp"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editGanadaTalentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"

                android:inputType="number"
                android:padding="3dp"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/gastado"
                android:background="@drawable/border"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/gastadaPx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/gastadaTalentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/restantes"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/noGastadaPx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/noGastadaTalentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>